# pgdevkit

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
docs/: database-layout.md
docs/superpowers/specs/: 2026-07-15-testdb-design.md
pgdb/: cli.py  connection.py  diff.py  introspect.py  models.py  parser.py
pgdevkit/: cli.py  connection.py  diff.py  fetch_missing.py  lakebase.py  models.py  parser.py
pgdevkit/db/: __init__.py  complex_types.py  connection.py  crud.py  loader.py  model.py
pgdevkit/testdb/: __init__.py  api.py  config.py  constants.py  container.py  naming.py  query.py  schema.py
skills/pgdevkit/: SKILL.md
skills/pgdevkit/references/: complex_helper.py
tests/: conftest.py  test_cli_compare.py  test_compare.py  test_connection.py  test_fetch_missing.py  test_fetch_missing_cli.py  test_lakebase.py
tests/db/: test_complex_types.py  test_connection.py  test_crud.py  test_loader.py
tests/fixtures/: 02_types.sql  03_tables.sql  04_views.sql  05_functions.sql  06_indexes.sql
tests/testdb/: conftest.py  test_api.py  test_cli.py  test_config.py  test_constants.py  test_container.py  test_naming.py  test_query.py  test_schema.py
tests/testdb/fixtures/database/app/migrations/: 001_add_gadget_note.sql  002_unsafe_drop_gadget_note.sql
tests/testdb/fixtures/database/app/tables/: gadget.sql  gadget.test_data.json  widget.sql  widget.test_data.json  widget_part.sql  widget_part_detail.sql
tests/testdb/fixtures/database/app/types/: dimensions.sql  mood.sql
tests/testdb/fixtures/database/app/views/: a_wrapper_view.sql  b_base_view.sql
