[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pgdevkit"]

[project]
name = "pgdevkit"
version = "0.1.0"
description = "A helper for developing with Postgres"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "sqlglot[c]>=30.11.0",
]

[project.optional-dependencies]
azure = ["azure-identity>=1.19.0"]
cli = [
    "rich>=13.0.0",
    "typer>=0.26.7",
]

[project.scripts]
pgdb = "pgdevkit.cli:app"

[tool.pgdevkit]
name = "pgdevkit"

[dependency-groups]
dev = [
    "ty>=0.0.59",
]
test = [
    "psycopg[binary]>=3.2.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-env>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
